Checkbox alignment issue in work education on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -760,7 +760,7 @@ input[type='number'] {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: -1px;
+    margin-top: -2px;
   }
 }
 
@@ -773,7 +773,7 @@ input[type='number'] {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: -2px;
+  /* margin-top: -2px; */
 }
 
 .oembedIframe {
